--- a/Work_Ryu/css/work_main.css
+++ b/Work_Ryu/css/work_main.css
@@ -915,15 +915,22 @@ section .episode_scroll_container .episode_list .episode_card:hover .episode_ima
 }
 
 section .episode_scroll_container .episode_list .episode_card .episode_info {
-    background-color: #2B2B2B;
-    padding: 20px;
+    background-color: var(--Bcolor);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.41),
+        0 2px 2px rgba(0, 0, 0, 0.41),
+        0 4px 4px rgba(0, 0, 0, 0.41),
+        0 6px 8px rgba(0, 0, 0, 0.41),
+        0 8px 16px rgba(0, 0, 0, 0.41);
+    ;
+    padding: 16px 12px;
     display: flex;
     flex-direction: column;
+    /* justify-content: center; */
     gap: 10px;
 }
 
 section .episode_scroll_container .episode_list .episode_card .episode_info .episode_title {
-    font-family: 'Assistant', sans-serif;
+    font-family: 'pretendard', sans-serif;
     font-weight: 600;
     font-size: 26px;
     line-height: 1;
@@ -934,14 +941,15 @@ section .episode_scroll_container .episode_list .episode_card .episode_info .epi
 
 section .episode_scroll_container .episode_list .episode_card .episode_info .episode_desc {
     font-family: 'Assistant', sans-serif;
-    font-weight: 400;
-    font-size: 20px;
+    font-weight: 300;
+    font-size: 16px;
     line-height: 1.3;
     color: var(--Wcolor);
     height: 104px;
     overflow: hidden;
     margin: 0;
     letter-spacing: 0;
+    height: 90px;
 }
 
 /* section.episode */
