--- a/css/common.css
+++ b/css/common.css
@@ -584,11 +584,31 @@ nav.mobile ~ .ham ul li:nth-child(3) {
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    padding-bottom: 40px;
-    /* border-bottom: 0.5px solid var(--Wcolor); */
+    padding-bottom: 50px;
+    margin-bottom: 30px;
     width: 100%;
     max-width: 300px;
-    margin: 0 auto;
+    margin: 0 auto 30px;
+    position: relative;
+}
+
+.ham_nav .main_nav .nav_item::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
+    height: 0.5px;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.ham_nav .main_nav .nav_item:last-child {
+    margin-bottom: 0;
+}
+
+.ham_nav .main_nav .nav_item:last-child::after {
+    display: none;
 }
 
 .ham_nav .main_nav .nav_item .main_category {
