--- a/moon/css/pg-style.css
+++ b/moon/css/pg-style.css
@@ -74,30 +74,27 @@ h2 {
 .hero {
   width: 100%;
   height: 100vh;
-  /* background: linear-gradient(transparent 20%, #fff 40%); */
-  /* padding-block: 300px; */
+  background: var(--Wㅉcolor);
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  position: relative;
 }
 
 .hero .sect_inner {
   width: 100%;
+  padding-inline: 200px;
   display: flex;
   flex-direction: row;
   position: relative;
   align-items: center;
   justify-content: space-between;
-
 }
 
 
 
 .hero .hero-txtbox {
   color: #fff;
-  color: transparent;
   font: 800 86px/130% "Pretendard", sans-serif;
   text-align: left;
 }
@@ -156,7 +153,7 @@ h2 {
 .contest-winner {
   background: var(--Bcolor);
   width: 100%;
-  height: 7000px;
+  height: auto;
   /* overflow: hidden; */
   padding-block: 200px;
 }
@@ -164,19 +161,17 @@ h2 {
 .contest-winner .top {
   display: flex;
   justify-content: center;
-  gap: 32px;
+  align-items: center;
+  gap: 50px;
   width: 100%;
-  position: relative;
-  background: #ccc;
+  padding-right: 90px;
+  /* background: #ccc; */
 }
 
 .contest-winner .top .decoImg {
   background: url(../../moon/asset/goldcup.png) center/cover;
   width: 201px;
   aspect-ratio: 201/229;
-  position: absolute;
-  top: 0;
-  left: 0px;
   animation: floating-20 forwards infinite 5s;
 }
 
@@ -197,10 +192,12 @@ h2 {
 
 .contest-winner .winner-wrap {
   width: 100%;
+  height: auto;
 }
 
 .contest-winner .video-content {
   height: 100vh;
+  width: 100%;
 }
 
 .contest-winner .video-wrap {
